# template-repo

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  run.bat
labs/example/: README.md  model.py  report.md  research.ipynb
labs/lab1/: README.md  report.md  research.ipynb
labs/lab2/: README.md  report.md  research.ipynb
labs/lab3/: README.md  report.md  research.ipynb
labs/lab4/: README.md  report.md  research.ipynb
labs/utils/: __init__.py  seed.py
